--- a/ccu-historian/src-webapp/custom/h2-highchart/HighChart.html
+++ b/ccu-historian/src-webapp/custom/h2-highchart/HighChart.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="de"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" sizes="192x192" href="http://10.0.0.250:8082/custom/h2-highchart/historian-196.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="http://10.0.0.250:8082/custom/h2-highchart/historian-180.png">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" sizes="192x192" href="historian-196.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="historian-180.png" />
     <title>CCU-historian: HighChart</title>
     <script> var apiKey=""</script>
-    <link rel='stylesheet' href="/external/bootstrap/css/bootstrap.css"></link>
-    <link rel='stylesheet' href="historian.css"></link>
-    <link rel='stylesheet' href='stock-tools/popup.css'></link>
-    <link rel='stylesheet' href='stock-tools/gui.css'></link>
+    <link rel='stylesheet' href="/external/bootstrap/css/bootstrap.css" />
+    <link rel='stylesheet' href="historian.css" />
+    <link rel='stylesheet' href='stock-tools/popup.css' />
+    <link rel='stylesheet' href='stock-tools/gui.css' />
     <style>p { border: 0px solid; }</style>
   </head>
   <body style="background-color: rgb(255, 255, 255);">
@@ -21,10 +20,9 @@
         <select id="Select-Raum" class="form-select-h2"></select>
         <select id="Select-Gewerk" class="form-select-h2"></select>
         <input id="filterFeld" class="form-select-h2" type="text" placeholder="Suchen ...">
-        <div class="btn-group" role="group">
-          <button id="refresh" class="btn btn-default">Refresh</button>
-          <button id="createLink" class="btn btn-default">Link erzeugen</button>
-        </div>
+        <button id="refresh" class="btn btn-default">Refresh</button>
+        <button id="createLink" class="btn btn-default">Link erzeugen</button>
+        <button id='bntFavorit' class='btn btn-default'>Favoriten</button>
       </div>
       <div id="container" style="height:200px" data-highcharts-chart="0"></div>
       <div id="message" style="color: rgb(51, 51, 51);">
@@ -146,16 +144,16 @@
                 <span id="Font-Size" class="LinePopup-text">Font-Size</span>
                 <select id="Select-FontSize" class="form-select-h2"></select>
               </div>
-              <div id="refresh">
-                <span id="Text-Refresh" class="LinePopup-text">Refresh in Sec.</span>
-                <input id="Line-Refresh" type="number" step="0" class="form-input-h2">
+              <div id="autoRefresh">
+                <span id="Text-autoRefresh" class="LinePopup-text">Refresh in Sec.</span>
+                <input id="Line-Refresh" type="number" step="any" class="form-input-h2">
               </div>
               <div id="title">
-                <span id="Text-Refresh" class="LinePopup-text">Title</span>
+                <span id="ChartTitle" class="LinePopup-text">Title</span>
                 <input id="Line-Title" class="form-input-h2">
               </div>
               <div id="subtitle">
-                <span id="Text-Refresh" class="LinePopup-text">Subtitle</span>
+                <span id="ChartSubTitle" class="LinePopup-text">Subtitle</span>
                 <input id="Line-Subtitle" class="form-input-h2">
               </div>
             </div>
@@ -174,8 +172,8 @@
               <h4 class="modal-title3">Modal Header</h4>
             </div>
             <div class="modal-body">
-              <div id="title">
-                <span id="Text-Refresh" class="LinePopup-text">Title</span>
+              <div id="axisTitle">
+                <span id="Text-axisTitle" class="LinePopup-text">Title</span>
                 <input id="Line-Title3" class="form-input-h2">
               </div>
               <div id="position">
@@ -204,12 +202,33 @@
               </div>
               <div id="tickamount">
                 <span id="Text-TickAmount" class="LinePopup-text">Teilung</span>
-                <input id="Line-TickAmount" type="number" step="0" class="form-input-h2">
+                <input id="Line-TickAmount" type="number" step="any" class="form-input-h2">
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" id="AxisDefault">Default</button>
               <button type="button" class="btn btn-default" id="Dialog3BtnOK">Ok</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id='FavPopup' class='modal fade' role='dialog'>
+        <div class='modal-dialog'>
+          <div class='modal-content'>
+            <div class='modal-header'>
+              <button type='button' class='close' id='Dialog4BtnClose'>x</button>
+              <h4 class='modal-title4'>Modal Header</h4>
+            </div>
+            <div class='modal-body'>
+              <div id='title4'>
+                <span id='Text-Title4' class='LinePopup-text'>Title</span>
+                <input id='Line-Title4' class='form-input-h2'>
+                <button id='favAdd' class='btn btn-default'>Add</button>
+              </div>
+              <div id='favList'></div>
+            </div>
+            <div class='modal-footer'>
+              <button type='button' class='btn btn-default' id='Dialog4BtnOK'>Ok</button>
             </div>
           </div>
         </div>
