update highchart to v7.5

--- a/ccu-historian/src-webapp/custom/h2-highchart/HighChart.html
+++ b/ccu-historian/src-webapp/custom/h2-highchart/HighChart.html
@@ -96,6 +96,10 @@
                 <span id="Text-ShortName" class="LinePopup-text">Kurzname</span>
                 <input id="Line-ShortName" class="form-input-h2">
               </div>
+              <div id="script" style="display: none;">
+                <span id="Text-ScriptName" class="LinePopup-text">Script</span>
+                <textarea id="Line-Script" rows="5" cols="40" class="form-control textpane"></textarea>
+              </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" id="LineDefault">Default</button>
@@ -245,6 +249,45 @@
             </div>
             <div class='modal-footer'>
               <button type='button' class='btn btn-default' id='Dialog4BtnOK'>Ok</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id='ScriptPopup' class='modal fade' role='dialog'>
+        <div class='modal-dialog'>
+          <div class='modal-content'>
+            <div class='modal-header'>
+              <button type='button' class='close' id='Dialog5BtnClose'>x</button>
+              <h4 class='modal-title5'>Modal Header</h4>
+            </div>
+            <div class='modal-body'>
+              <div id='dispName5'>
+                <span id='Text-dispName5' class='LinePopup-text'>Display Name</span>
+                <input id='Line-dispName5' class='form-input-h2'></input>
+              </div>
+              <div id='raum'>
+                <span id='Text-raum5' class='LinePopup-text'>Raum</span>
+                <input id='Line-raum5' class='form-input-h2'></input>
+              </div>
+              <div id='function'>
+                <span id='Text-function5' class='LinePopup-text'>Funktion</span>
+                <input id='Line-function5' class='form-input-h2'></input>
+              </div>
+              <div id='comment'>
+                <span id='Text-comment5' class='LinePopup-text'>Bemerkung</span>
+                <input id='Line-comment5' class='form-input-h2'></input>
+              </div>
+              <div id='unit'>
+                <span id='Text-unit5' class='LinePopup-text'>Einheit</span>
+                <input id='Line-unit5' class='form-input-h2'></input>
+              </div>
+              <div id='script'>
+                <span id='Text-ScriptName5' class='LinePopup-text'>Script</span>
+                <textarea id='Line-Script5' rows='5' cols='40' class='form-control textpane'></textarea>
+              </div>
+            </div>
+            <div class='modal-footer'>
+              <button type='button' class='btn btn-default' id='Dialog5BtnOK'>Create</button>
             </div>
           </div>
         </div>
